Refactored Import functionality, added Home Assistant support